--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
     font-size: 16px;
 }
 body {
-    background-color: rgb(183, 118, 243);
+    background-color: rgb(138, 202, 255);
 
 }
 
@@ -11,6 +11,20 @@ main {
     background-color: white;
     width: 500px;
     margin: auto;
-    padding: 10px;
+    padding: 70px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.322);
+}
+
+h1 {
+    font-size: 2em;
+    color: rgb(147, 39, 248);
+}
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(147, 39, 248);
+}
+
+img.lado {
+    float: right;
 }
